--- a/index.html
+++ b/index.html
@@ -1,280 +1,100 @@
 <!DOCTYPE html>
 <html lang="de">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Ultimate School Clicker</title>
-  <style>
-    :root {
-      --bg-main: linear-gradient(135deg, #6e00ff, #00c3ff);
-      --text-col: white;
-      --btn-col: #ffcc00;
-      --btn-col-hover: #ffe066;
-    }
-
-    body.dark {
-      --bg-main: linear-gradient(135deg, #000000, #333333);
-      --text-col: #ffffff;
-      --btn-col: #444444;
-      --btn-col-hover: #666666;
-    }
-
-    body.light {
-      --bg-main: linear-gradient(135deg, #ffffff, #d9d9d9);
-      --text-col: #000000;
-      --btn-col: #bbbbbb;
-      --btn-col-hover: #dddddd;
-    }
-
-    body.school {
-      --bg-main: linear-gradient(135deg, #ff5500, #ffdd00);
-      --text-col: #000000;
-      --btn-col: #00aaff;
-      --btn-col-hover: #33ccff;
-    }
-
-    body {
-      margin: 0;
-      font-family: Arial, sans-serif;
-      background: var(--bg-main);
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      justify-content: center;
-      height: 100vh;
-      color: var(--text-col);
-      overflow: hidden;
-      transition: 0.4s;
-    }
-
-    h1 { font-size: 40px; text-shadow: 0 0 10px rgba(0,0,0,0.4); }
-    #counter, #highscore, #powerupTimer { font-size: 28px; margin: 10px; }
-
-    #clickBtn {
-      padding: 20px 40px;
-      font-size: 28px;
-      border: none;
-      border-radius: 15px;
-      background: var(--btn-col);
-      cursor: pointer;
-      transition: 0.2s;
-    }
-    #clickBtn:hover { scale: 1.1; background: var(--btn-col-hover); }
-
-    .popup {
-      position: absolute;
-      font-size: 24px;
-      animation: float 1s ease-out forwards;
-      pointer-events: none;
-    }
-    @keyframes float { 0% {opacity:1; transform:translateY(0);} 100% {opacity:0; transform:translateY(-80px);} }
-
-    #themeSelector {
-      position: absolute;
-      top: 20px;
-      right: 20px;
-      padding: 10px;
-      background: rgba(0,0,0,0.3);
-      border-radius: 10px;
-      color: white;
-    }
-
-  </style>
+<meta charset="UTF-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<title>Ultimate School Clicker Deluxe</title>
+<style>
+:root {--bg-main: linear-gradient(135deg,#6e00ff,#00c3ff);--text-col:white;--btn-col:#ffcc00;--btn-col-hover:#ffe066;}
+body.dark{--bg-main:linear-gradient(135deg,#000,#333);--text-col:#fff;--btn-col:#444;--btn-col-hover:#666;}
+body.light{--bg-main:linear-gradient(135deg,#fff,#d9d9d9);--text-col:#000;--btn-col:#bbb;--btn-col-hover:#ddd;}
+body.school{--bg-main:linear-gradient(135deg,#ff5500,#ffdd00);--text-col:#000;--btn-col:#00aaff;--btn-col-hover:#33ccff;}
+body{margin:0;font-family:Arial,sans-serif;background:var(--bg-main);display:flex;flex-direction:column;align-items:center;justify-content:center;height:100vh;color:var(--text-col);overflow:hidden;transition:0.4s;}
+h1{font-size:40px;text-shadow:0 0 10px rgba(0,0,0,0.4);}
+#counter,#highscore,#powerupTimer,#levelBox{font-size:28px;margin:10px;}
+#clickBtn{padding:20px 40px;font-size:28px;border:none;border-radius:15px;background:var(--btn-col);cursor:pointer;transition:0.2s;}
+#clickBtn:hover{scale:1.1;background:var(--btn-col-hover);}
+.popup{position:absolute;font-size:24px;animation:float 1s ease-out forwards;pointer-events:none;}
+@keyframes float{0%{opacity:1;transform:translateY(0);}100%{opacity:0;transform:translateY(-80px);}}
+#themeSelector{position:absolute;top:20px;right:20px;padding:10px;background:rgba(0,0,0,0.3);border-radius:10px;color:white;}
+</style>
 </head>
 <body>
-  <select id="themeSelector">
-    <option value="default">✨ Standard</option>
-    <option value="dark">🌙 Dunkel</option>
-    <option value="light">🔆 Hell</option>
-    <option value="school">🏫 Schul‑Meme‑Style</option>
-  </select>
+<select id="themeSelector">
+<option value="default">✨ Standard</option>
+<option value="dark">🌙 Dunkel</option>
+<option value="light">🔆 Hell</option>
+<option value="school">🏫 Schul-Meme-Style</option>
+</select>
+<h1>Ultimate School Clicker Deluxe</h1>
+<div id="counter">Klicks: 0</div>
+<div id="highscore">🏆 Highscore: 0</div>
+<div id="powerupTimer"></div>
+<div id="levelBox"></div>
+<button id="clickBtn">KLICK MICH!</button>
+<audio id="clickSound" src="https://cdn.pixabay.com/download/audio/2022/03/15/audio_6ebadc177e.mp3?filename=click-124467.mp3"></audio>
+<audio id="powerSound" src="https://cdn.pixabay.com/download/audio/2022/03/22/audio_6c7dbfad77.mp3?filename=powerup-110248.mp3"></audio>
+<audio id="bgMusic" src="https://cdn.pixabay.com/download/audio/2023/03/13/audio_54d393ca5f.mp3?filename=gaming-music-143081.mp3" loop></audio>
+<script>
+let count=0; let highscore=localStorage.getItem("hs")||0; let multiplier=1; let powerTimer=0;
+let level=Number(localStorage.getItem("level")||1); let xp=Number(localStorage.getItem("xp")||0);
+let currentSkin=localStorage.getItem("skin")||"schueler"; let admin=localStorage.getItem("admin")=="true";
+let loggedIn=false;
+const counter=document.getElementById("counter"); const highCounter=document.getElementById("highscore");
+const levelBox=document.getElementById("levelBox"); const timerText=document.getElementById("powerupTimer");
+const btn=document.getElementById("clickBtn"); const clickSound=document.getElementById("clickSound");
+const powerSound=document.getElementById("powerSound"); const bgMusic=document.getElementById("bgMusic"); bgMusic.volume=0.3; bgMusic.play();
+const skins={schueler:"🧑‍🎓",lehrer:"👨‍🏫",direktor:"👨‍💼"};
+const memeBackgrounds=["https://i.imgur.com/4AiXzf8.jpeg","https://i.imgur.com/b6QKOD4.jpeg","https://i.imgur.com/2yaf2wb.jpeg"];
+let memeIndex=0;
+function changeMemeBg(){document.body.style.backgroundImage=`url(${memeBackgrounds[memeIndex]})`;document.body.style.backgroundSize="cover";document.body.style.backgroundPosition="center"; memeIndex=(memeIndex+1)%memeBackgrounds.length;}
+setInterval(changeMemeBg,15000);
+const themeSelector=document.getElementById("themeSelector"); themeSelector.addEventListener("change",()=>{document.body.className=themeSelector.value;});
 
-  <h1>Ultimate School Clicker</h1>
-  <div id="counter">Klicks: 0</div>
-  <div id="highscore">🏆 Highscore: 0</div>
-  <div id="powerupTimer"></div>
-  <button id="clickBtn">KLICK MICH!</button>
+// Level & XP
+function addXP(amount){xp+=amount; if(xp>=level*50){xp=0; level++; alert(`🎉 Level UP! Du bist jetzt Level ${level}!`);} localStorage.setItem("level",level); localStorage.setItem("xp",xp); levelBox.textContent=`Level ${level} – XP: ${xp}`;}
+levelBox.textContent=`Level ${level} – XP: ${xp}`;
 
-  <audio id="clickSound" src="https://cdn.pixabay.com/download/audio/2022/03/15/audio_6ebadc177e.mp3?filename=click-124467.mp3"></audio>
-  <audio id="powerSound" src="https://cdn.pixabay.com/download/audio/2022/03/22/audio_6c7dbfad77.mp3?filename=powerup-110248.mp3"></audio>
+// Klick Event & Vibration
+btn.addEventListener("click",(event)=>{
+clickSound.currentTime=0; clickSound.play(); count+=multiplier; counter.textContent="Klicks: "+count;
+if(count>highscore){highscore=count; localStorage.setItem("hs",highscore); highCounter.textContent="🏆 Highscore: "+highscore;}
+const pop=document.createElement("div"); pop.classList.add("popup"); pop.textContent="+"+multiplier; pop.style.left=event.clientX+"px"; pop.style.top=event.clientY+"px"; document.body.appendChild(pop); setTimeout(()=>pop.remove(),900);
+if(Math.random()<0.15) activatePowerup(); addXP(multiplier); if(window.navigator.vibrate){navigator.vibrate(50);}
+});
+function activatePowerup(){multiplier=5; powerTimer=5; powerSound.play(); timerText.textContent="⚡ POWER-UP: "+powerTimer+"s";
+const interval=setInterval(()=>{powerTimer--; timerText.textContent="⚡ POWER-UP: "+powerTimer+"s"; if(powerTimer<=0){clearInterval(interval); multiplier=1; timerText.textContent="";}},1000);}
 
-  <script>
-    let count = 0;
-    let highscore = localStorage.getItem("hs") || 0;
-    document.getElementById("highscore").textContent = "🏆 Highscore: " + highscore;
+// Skin Button
+const skinBtn=document.createElement("button"); skinBtn.textContent="🎭 Skin wechseln"; skinBtn.style.marginTop="20px"; document.body.appendChild(skinBtn);
+skinBtn.onclick=()=>{const keys=Object.keys(skins); const next=keys[(keys.indexOf(currentSkin)+1)%keys.length]; currentSkin=next; localStorage.setItem("skin",currentSkin); document.title=`Ultimate School Clicker Deluxe ${skins[currentSkin]}`;};
+document.title=`Ultimate School Clicker Deluxe ${skins[currentSkin]}`;
 
-    let multiplier = 1;
-    let powerTimer = 0;
+// Admin Mode
+const adminBtn=document.createElement("button"); adminBtn.textContent="👑 Admin Mode"; adminBtn.style.marginTop="10px"; adminBtn.style.padding="15px"; adminBtn.style.background="red"; adminBtn.style.color="white"; adminBtn.style.borderRadius="10px"; document.body.appendChild(adminBtn);
+adminBtn.onclick=()=>{const pw=prompt("Admin Passwort eingeben (Standard: 1234)"); if(pw=="1234"){admin=true; localStorage.setItem("admin",true); alert("Admin Mode aktiviert!"); unlockAdminTools();}};
+function unlockAdminTools(){if(!admin)return; const cheatBtn=document.createElement("button"); cheatBtn.textContent="💰 +1000 Punkte"; cheatBtn.style.marginTop="10px"; cheatBtn.style.padding="15px"; cheatBtn.style.background="gold"; cheatBtn.style.color="black"; cheatBtn.style.borderRadius="10px"; document.body.appendChild(cheatBtn); cheatBtn.onclick=()=>{count+=1000; counter.textContent="Klicks: "+count;};}
+if(admin) unlockAdminTools();
 
-    const counter = document.getElementById("counter");
-    const highCounter = document.getElementById("highscore");
-    const timerText = document.getElementById("powerupTimer");
-    const btn = document.getElementById("clickBtn");
+// Optional Login
+const loginBtn=document.createElement("button"); loginBtn.textContent="🔑 Anmelden (optional)"; loginBtn.style.marginTop="10px"; document.body.appendChild(loginBtn);
+loginBtn.onclick=()=>{const user=prompt("GitHub Benutzername (optional)"); if(user){loggedIn=true; alert(`🎉 Eingeloggt als ${user}, Spielstand gesperrt`);} else{loggedIn=false; alert("🎮 Spiel ohne Konto läuft normal");}};
 
-    const clickSound = document.getElementById("clickSound");
-    const powerSound = document.getElementById("powerSound");
+// --- Boss-Fights ---
+function spawnBoss(){if(count<100) return; alert("⚔️ Boss erscheint! Klicke schnell 20x!\nDu bekommst Bonus-XP wenn du ihn besiegst."); let bossHP=20; const listener=(event)=>{bossHP--; addXP(5); if(bossHP<=0){alert("🎉 Boss besiegt! Bonus XP! "); document.removeEventListener('click',listener);}}; document.addEventListener('click',listener);}
+setInterval(spawnBoss,60000);
 
-    btn.addEventListener("click", (event) => {
-      clickSound.currentTime = 0;
-      clickSound.play();
+// --- Prestige-System ---
+let prestigePoints=Number(localStorage.getItem('prestige')||0);
+function prestige(){if(level<10){alert('Level 10 nötig für Prestige!'); return;} prestigePoints++; localStorage.setItem('prestige',prestigePoints); count=0; level=1; xp=0; alert(`🌟 Prestige erreicht! Du hast jetzt ${prestigePoints} Prestige Punkte!`); updateDisplay();}
+function updateDisplay(){counter.textContent="Klicks: "+count; levelBox.textContent=`Level ${level} – XP: ${xp}`; highCounter.textContent="🏆 Highscore: "+highscore;}
 
-      count += multiplier;
-      counter.textContent = "Klicks: " + count;
+// --- Shop mit Upgrades ---
+const shopBtn=document.createElement('button'); shopBtn.textContent='🛒 Shop'; shopBtn.style.marginTop='10px'; document.body.appendChild(shopBtn);
+shopBtn.onclick=()=>{let buy=prompt('Upgrade kaufen? +1 Multiplier für 50 Klicks'); if(buy && count>=50){count-=50; multiplier++; alert('Multiplier erhöht!'); updateDisplay();}}
 
-      if (count > highscore) {
-        highscore = count;
-        localStorage.setItem("hs", highscore);
-        highCounter.textContent = "🏆 Highscore: " + highscore;
-      }
-
-      const pop = document.createElement("div");
-      pop.classList.add("popup");
-      pop.textContent = "+" + multiplier;
-      pop.style.left = event.clientX + "px";
-      pop.style.top = event.clientY + "px";
-      document.body.appendChild(pop);
-      setTimeout(() => pop.remove(), 900);
-
-      if (Math.random() < 0.15) activatePowerup();
-    });
-
-    function activatePowerup() {
-      multiplier = 5;
-      powerTimer = 5;
-      powerSound.play();
-
-      timerText.textContent = "⚡ POWER-UP: " + powerTimer + "s";
-
-      const interval = setInterval(() => {
-        powerTimer--;
-        timerText.textContent = "⚡ POWER-UP: " + powerTimer + "s";
-
-        if (powerTimer <= 0) {
-          clearInterval(interval);
-          multiplier = 1;
-          timerText.textContent = "";
-        }
-      }, 1000);
-    }
-
-    const themeSelector = document.getElementById("themeSelector");
-    themeSelector.addEventListener("change", () => {
-      document.body.className = themeSelector.value;
-    });
-  </script>
-  <script>
-    // (Der gesamte alte JS-Code bleibt erhalten!)
-    // --- Erweiterungen kommen hier UNTEN hinzu ---
-
-    // 🎵 Hintergrundmusik
-    const music = new Audio("https://cdn.pixabay.com/download/audio/2023/03/13/audio_54d393ca5f.mp3?filename=gaming-music-143081.mp3");
-    music.loop = true;
-    music.volume = 0.3;
-    music.play();
-
-    // 🖼️ Meme-Hintergrund
-    const memeBackgrounds = [
-      "https://i.imgur.com/4AiXzf8.jpeg",
-      "https://i.imgur.com/b6QKOD4.jpeg",
-      "https://i.imgur.com/2yaf2wb.jpeg"
-    ];
-
-    let memeIndex = 0;
-    function changeMemeBg() {
-      document.body.style.backgroundImage = `url(${memeBackgrounds[memeIndex]})`;
-      document.body.style.backgroundSize = "cover";
-      document.body.style.backgroundPosition = "center";
-      memeIndex = (memeIndex + 1) % memeBackgrounds.length;
-    }
-    setInterval(changeMemeBg, 15000);
-
-    // 🎓 Skins
-    const skins = {
-      schueler: "🧑‍🎓",
-      lehrer: "👨‍🏫",
-      direktor: "👨‍💼"
-    };
-
-    const skinBtn = document.createElement("button");
-    skinBtn.textContent = "🎭 Skin wechseln";
-    skinBtn.style.marginTop = "20px";
-    document.body.appendChild(skinBtn);
-
-    let currentSkin = localStorage.getItem("skin") || "schueler";
-    document.title = `Ultimate School Clicker ${skins[currentSkin]}`;
-
-    skinBtn.onclick = () => {
-      const keys = Object.keys(skins);
-      const next = keys[(keys.indexOf(currentSkin) + 1) % keys.length];
-      currentSkin = next;
-      localStorage.setItem("skin", currentSkin);
-      document.title = `Ultimate School Clicker ${skins[currentSkin]}`;
-    };
-
-    // 🎯 Levelsystem
-    let level = Number(localStorage.getItem("level") || 1);
-    let xp = Number(localStorage.getItem("xp") || 0);
-
-    const levelBox = document.createElement("div");
-    levelBox.style.fontSize = "24px";
-    levelBox.style.marginTop = "10px";
-    levelBox.textContent = `Level ${level} – XP: ${xp}`;
-    document.body.insertBefore(levelBox, btn);
-
-    function addXP(amount) {
-      xp += amount;
-      if (xp >= level * 50) {
-        xp = 0;
-        level++;
-        alert(`🎉 Level UP! Du bist jetzt Level ${level}!`);
-      }
-      localStorage.setItem("level", level);
-      localStorage.setItem("xp", xp);
-      levelBox.textContent = `Level ${level} – XP: ${xp}`;
-    }
-
-    btn.addEventListener("click", () => addXP(multiplier));
-
-    // 👑 Admin-Button
-    const adminBtn = document.createElement("button");
-    adminBtn.textContent = "👑 Admin Mode";
-    adminBtn.style.marginTop = "10px";
-    adminBtn.style.padding = "15px";
-    adminBtn.style.background = "red";
-    adminBtn.style.color = "white";
-    adminBtn.style.borderRadius = "10px";
-    document.body.appendChild(adminBtn);
-
-    let admin = localStorage.getItem("admin") === "true";
-
-    adminBtn.onclick = () => {
-      const pw = prompt("Admin Passwort eingeben (Standard: 1234)");
-      if (pw === "1234") {
-        admin = true;
-        localStorage.setItem("admin", true);
-        alert("Admin Mode aktiviert!");
-        unlockAdminTools();
-      }
-    };
-
-    function unlockAdminTools() {
-      if (!admin) return;
-      const cheatBtn = document.createElement("button");
-      cheatBtn.textContent = "💰 +1000 Punkte";
-      cheatBtn.style.marginTop = "10px";
-      cheatBtn.style.padding = "15px";
-      cheatBtn.style.background = "gold";
-      cheatBtn.style.color = "black";
-      cheatBtn.style.borderRadius = "10px";
-      document.body.appendChild(cheatBtn);
-
-      cheatBtn.onclick = () => {
-        count += 1000;
-        counter.textContent = "Klicks: " + count;
-      };
-    }
-
-    if (admin) unlockAdminTools();
-  </script>
+// --- Schul-Fächer Power-Ups ---
+const subjects=['Mathe','Deutsch','Bio','Sport']; function randomPowerUp(){if(Math.random()<0.1){const sub=subjects[Math.floor(Math.random()*subjects.length)]; multiplier+=1; alert(`🏫 PowerUp: ${sub} +1 Multiplier`);}} setInterval(randomPowerUp,30000);
+</script>
 </body>
 </html>
